# opencl-extension-loader

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md
.github/workflows/: cmake.yml
docs/: ISSUE_TEMPLATE.md
scripts/: call_all.c.mako  gen_openclext.py  openclext.cpp  openclext.cpp.mako  openclext.def  openclext.def.mako
src/: loader.cpp  openclext.cpp  openclext.def
tests/: CMakeLists.txt  call_all.c  dx_sharing_prototypes.h  loader_info_prototypes.h  test_extension_loader.c
