foreach(VERSION 120 200 210 220 300)
    set(TEST_EXE test_extension_loader_cpp_${VERSION})
    add_executable(${TEST_EXE} test_extension_loader.cpp)
    set_target_properties(${TEST_EXE} PROPERTIES FOLDER "OpenCLExtensionLoader/Tests")
    target_include_directories(${TEST_EXE} PUBLIC ${OpenCL_INCLUDE_DIRS})
    target_compile_definitions(${TEST_EXE} PUBLIC -DCL_TARGET_OPENCL_VERSION=${VERSION})
    target_link_libraries(${TEST_EXE} PUBLIC ${OpenCL_LIBRARY} OpenCLExt)
    add_test(NAME ${TEST_EXE} COMMAND ${TEST_EXE})
endforeach(VERSION)

foreach(VERSION 120 200 210 220 300)
    set(TEST_EXE test_extension_loader_c_${VERSION})
    add_executable(${TEST_EXE} test_extension_loader.c)
    set_target_properties(${TEST_EXE} PROPERTIES FOLDER "OpenCLExtensionLoader/Tests")
    target_include_directories(${TEST_EXE} PUBLIC ${OpenCL_INCLUDE_DIRS})
    target_compile_definitions(${TEST_EXE} PUBLIC -DCL_TARGET_OPENCL_VERSION=${VERSION})
    target_link_libraries(${TEST_EXE} PUBLIC ${OpenCL_LIBRARY} OpenCLExt)
    add_test(NAME ${TEST_EXE} COMMAND ${TEST_EXE})
endforeach(VERSION)

